logs/SyntaxError.txt
File "tests/Python_Errors/SyntaxError.py", line 1
    5=71 # can't assign to literal
    ^
SyntaxError: can't assign to literal

